--- a/pub/cfmem.yaml
+++ b/pub/cfmem.yaml
@@ -8,7 +8,7 @@ proxies:
   - &id001
     name: 🇺🇸_US_美国_1
     type: vmess
-    server: 172.67.221.183
+    server: 104.21.31.244
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -19,14 +19,59 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
+        host: www.nahck.site
   - &id002
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_1
+    type: vmess
+    server: 104.24.208.37
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id003
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_2
+    type: vmess
+    server: www.greendam.site
+    port: 80
+    cipher: auto
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: my1.tooters.ir
+  - &id004
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_1
+    type: vmess
+    server: rl1.269999.xyz
+    port: 27102
+    cipher: auto
+    uuid: 460d53e3-3fa4-456a-83d1-d75d17d87c65
+    alterId: 0
+    tls: true
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: rl1.269999.xyz
+  - &id005
     name: 🇺🇸_US_美国_2
     type: vmess
-    server: 172.67.212.114
-    port: 8080
+    server: 104.20.231.30
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -34,48 +79,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.biz
-  - &id003
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_1
-    type: trojan
-    server: 172.67.157.8
-    port: 2096
-    udp: true
-    password: RtOGIC4aSC
-    sni: ngo.topoppongroup.space
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '----------telegram:vpn_xw----------'
-  - &id004
-    name: 🇺🇸_US_美国_3
-    type: ss
-    server: 64.31.55.124
-    port: 12345
-    password: dongtaiwang.com
-    cipher: chacha20-ietf-poly1305
-  - &id005
-    name: 🇺🇸_US_美国_4
-    type: vmess
-    server: www.nahck.site
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: www.nahck.site
+        host: my1.tooters.ir
   - &id006
-    name: 🇺🇸_US_美国_5
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_3
     type: vmess
-    server: 172.67.180.248
-    port: 8080
+    server: for-irancell.outline-vpn.cloud
+    port: 80
     cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -83,61 +94,14 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.nahck.site
+        host: my1.tooters.ir
   - &id007
-    name: 🇬🇧_GB_英国
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_4
     type: vmess
-    server: au-melbourne-oracle-abfdf2.ip1.shop
-    port: 63503
+    server: 104.22.51.162
+    port: 80
     cipher: auto
-    uuid: ed4d8827-4d5a-4c05-a577-c66d6a2fc1e6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-  - &id008
-    name: 🇺🇸_US_美国->🇳🇱_NL_荷兰_2
-    type: trojan
-    server: 104.21.42.52
-    port: 2096
-    udp: true
-    password: RtOGIC4aSC
-    sni: ngo.topoppongroup.space
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: '----------telegram:vpn_xw----------'
-  - &id009
-    name: 🇩🇪_DE_德国_1
-    type: vmess
-    server: 116.203.116.244
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
-  - &id010
-    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
-    type: vmess
-    server: 183.232.170.22
-    port: 30128
-    cipher: auto
-    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: tcp
-  - &id011
-    name: 🇺🇸_US_美国_6
-    type: vmess
-    server: 104.21.23.176
-    port: 8080
-    cipher: auto
-    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
@@ -145,9 +109,9 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.crispyrainbow.biz
-  - &id012
-    name: 🇺🇸_US_美国_7
+        host: my1.tooters.ir
+  - &id008
+    name: 🇺🇸_US_美国_3
     type: vmess
     server: 104.21.82.183
     port: 8880
@@ -161,7 +125,118 @@ proxies:
       path: /
       headers:
         host: server26.beheshtbaneh.com
+  - &id009
+    name: 🇺🇸_US_美国_4
+    type: vmess
+    server: cfcdn1.sanfencdn9.com
+    port: 2086
+    cipher: auto
+    uuid: 851278d6-8c0b-4147-8939-89cface46627
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/Z7qdcrAGRw
+      headers:
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id010
+    name: 🇺🇸_US_美国_5
+    type: vmess
+    server: server33.beheshtbaneh.com
+    port: 8880
+    cipher: auto
+    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: server33.beheshtbaneh.com
+  - &id011
+    name: 🇺🇸_US_美国_6
+    type: trojan
+    server: 89.116.180.179
+    port: 443
+    udp: true
+    password: d2698cf9-c47e-455c-8384-12e642cbba15
+    sni: p6us4.pqjc.buzz
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /pq/us4
+  - &id012
+    name: 🇩🇪_DE_德国_1
+    type: vmess
+    server: 5.75.190.50
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
   - &id013
+    name: 🇨🇳_CN_中国->🇮🇳_IN_印度
+    type: vmess
+    server: 183.232.170.22
+    port: 30128
+    cipher: auto
+    uuid: 9f41898b-e80d-418d-9ea8-5c51a914722a
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: tcp
+  - &id014
+    name: 🇺🇸_US_美国_7
+    type: vmess
+    server: 172.67.166.190
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.online
+  - &id015
+    name: 🇨🇳_CN_中国->🇺🇸_US_美国_2
+    type: ss
+    server: lg3.dtku41.xyz
+    port: 44672
+    password: dongtaiwang.com
+    cipher: chacha20-ietf-poly1305
+  - &id016
+    name: 🇩🇪_DE_德国_2
+    type: vmess
+    server: 116.203.116.244
+    port: 3389
+    cipher: auto
+    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: http
+  - &id017
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_1
+    type: ss
+    server: yd.qianggewangluo.buzz
+    port: 10815
+    password: 6f35bc86-d226-4dd0-8f4c-708f23077d24
+    cipher: chacha20-ietf-poly1305
+  - &id018
+    name: 🇩🇪_DE_德国_3
+    type: ss
+    server: 80.92.204.106
+    port: 9094
+    password: rpgbNnU9rDDU4aWZ
+    cipher: aes-256-cfb
+  - &id019
     name: 🇺🇸_US_美国_8
     type: vmess
     server: www.crispyrainbow.biz
@@ -176,10 +251,10 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.biz
-  - &id014
+  - &id020
     name: 🇺🇸_US_美国_9
     type: vmess
-    server: www.blueberrywindow.online
+    server: 104.21.23.176
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -190,53 +265,11 @@ proxies:
     ws-opts:
       path: /
       headers:
-        host: www.blueberrywindow.online
-  - &id015
-    name: 🇳🇱_NL_荷兰
-    type: vmess
-    server: 91.242.229.69
-    port: 2086
-    cipher: auto
-    uuid: 88c216b8-56c6-4f34-bcfd-e198ce11f7d6
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /vmess
-      headers:
-        host: nl1.xv2ray.net
-  - &id016
-    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
-    type: trojan
-    server: 172.67.204.84
-    port: 443
-    udp: true
-    password: qj1Dz1CJmFQRhWr1SP80aA
-    sni: cdn-21.gsmxreality.com
-    skip-cert-verify: true
-    network: grpc
-    grpc-opts:
-      grpc-service-name: 443trojan
-  - &id017
-    name: 🇷🇺_RU_俄罗斯联邦
-    type: vmess
-    server: 45.144.2.113
-    port: 80
-    cipher: auto
-    uuid: 1cb996c8-e5bf-40d2-9a3c-149b3b721c5f
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /
-      headers:
-        host: 45.144.2.113
-  - &id018
+        host: www.crispyrainbow.biz
+  - &id021
     name: 🇺🇸_US_美国_10
     type: vmess
-    server: 172.67.166.190
+    server: www.crispyrainbow.online
     port: 8080
     cipher: auto
     uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
@@ -248,7 +281,7 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id019
+  - &id022
     name: 🇺🇸_US_美国_11
     type: vmess
     server: 104.21.89.252
@@ -263,8 +296,35 @@ proxies:
       path: /
       headers:
         host: www.crispyrainbow.online
-  - &id020
+  - &id023
     name: 🇺🇸_US_美国_12
+    type: vmess
+    server: 172.67.212.114
+    port: 8080
+    cipher: auto
+    uuid: 22826b44-5c1a-4b4b-dbaa-83a2e8bd95f0
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /
+      headers:
+        host: www.crispyrainbow.biz
+  - &id024
+    name: 🇺🇸_US_美国->🇷🇺_RU_俄罗斯联邦
+    type: trojan
+    server: 172.67.204.84
+    port: 443
+    udp: true
+    password: qj1Dz1CJmFQRhWr1SP80aA
+    sni: cdn-21.gsmxreality.com
+    skip-cert-verify: true
+    network: grpc
+    grpc-opts:
+      grpc-service-name: 443trojan
+  - &id025
+    name: 🇺🇸_US_美国_13
     type: vmess
     server: server32.beheshtbaneh.com
     port: 8880
@@ -278,42 +338,70 @@ proxies:
       path: /
       headers:
         host: server32.beheshtbaneh.com
-  - &id021
-    name: 🇨🇾_CY_塞浦路斯
+  - &id026
+    name: 🇦🇱_AL_阿尔巴尼亚
     type: ss
-    server: 85.239.40.69
-    port: 21205
-    password: P84jEsm2JGaOIpEv
-    cipher: aes-256-gcm
-  - &id022
-    name: 🇺🇸_US_美国_13
+    server: 109.104.152.144
+    port: 111
+    password: dongtaiwang.com
+    cipher: chacha20-ietf-poly1305
+  - &id027
+    name: 🇳🇱_NL_荷兰->🇩🇪_DE_德国
     type: vmess
-    server: cold-dawn-9246.fly.dev
-    port: 443
+    server: mci--join.outline-vpn.cloud
+    port: 80
     cipher: auto
-    uuid: ea4909ef-7ca6-4b46-bf2e-6c07896ef338
-    alterId: 0
-    tls: true
-    skip-cert-verify: true
-    network: ws
-    ws-opts:
-      path: /ea4909ef-7ca6-4b46-bf2e-6c07896ef338-vm
-  - &id023
-    name: 🇺🇸_US_美国_14
-    type: vmess
-    server: server33.beheshtbaneh.com
-    port: 8880
-    cipher: auto
-    uuid: 0873fffc-414f-4140-a155-672129fd9a1d
+    uuid: 7022982f-da4c-48c9-c660-b2315abdcf7e
     alterId: 0
     tls: false
     skip-cert-verify: true
     network: ws
     ws-opts:
-      path: /
+      path: /?ed=2048
       headers:
-        host: server33.beheshtbaneh.com
-  - &id024
+        host: a.prapt5.ir
+  - &id028
+    name: 🇺🇸_US_美国_14
+    type: vmess
+    server: 104.16.57.82
+    port: 2086
+    cipher: auto
+    uuid: 851278d6-8c0b-4147-8939-89cface46627
+    alterId: 0
+    tls: false
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /video/Z7qdcrAGRw
+      headers:
+        host: us77SmSk86j.fzbqfrse.xyz
+  - &id029
+    name: 🇺🇸_US_美国->🇩🇪_DE_德国_5
+    type: trojan
+    server: 104.19.154.92
+    port: 443
+    udp: true
+    password: 8d0de334-c1a0-44ab-9362-e7916c0d268d
+    sni: sshhiddifyc1.cpionline.cc
+    skip-cert-verify: true
+    network: ws
+    ws-opts:
+      path: /u5ht27KSp8j3Z2QIPbkyFm3I
+      headers:
+        host: sshhiddifyc1.cpionline.cc
+    alpn:
+      - http/1.1
+  - &id030
+    name: 🇨🇳_CN_中国->🇫🇷_FR_法国_2
+    type: trojan
+    server: 183.232.230.230
+    port: 8443
+    udp: true
+    password: 7b4066ae-accc-11eb-a8bf-f23c91cfbbc9
+    sni: 083ab9ab-s8usg0-0-zzkl.s5.p5pv.com
+    skip-cert-verify: true
+    network: tcp
+  - &id031
     name: 🇺🇸_US_美国_15
     type: vmess
     server: server31.beheshtbaneh.com
@@ -328,17 +416,6 @@ proxies:
       path: /
       headers:
         host: server31.beheshtbaneh.com
-  - &id025
-    name: 🇩🇪_DE_德国_2
-    type: vmess
-    server: 5.75.190.50
-    port: 3389
-    cipher: auto
-    uuid: 9c050a86-d612-48f1-ec32-e573df08a1b7
-    alterId: 0
-    tls: false
-    skip-cert-verify: true
-    network: http
 proxy-groups:
   - name: PROXY
     type: select
@@ -390,6 +467,12 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: LOAD-BALANCE
     type: load-balance
     url: http://www.gstatic.com/generate_204
@@ -420,6 +503,12 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
   - name: SELECT
     type: select
     proxies:
@@ -448,6 +537,12 @@ proxy-groups:
       - *id023
       - *id024
       - *id025
+      - *id026
+      - *id027
+      - *id028
+      - *id029
+      - *id030
+      - *id031
 rules:
   - RULE-SET,applications,DIRECT
   - DOMAIN,clash.razord.top,DIRECT
